fix jumping paddings

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ body {
   padding-left: 36px;
   padding-right: 36px;
 
-  @media screen and (min-width: 100px) and (max-width: 730px){
+  @media screen and (min-width: 1px) and (max-width: 768px){
     padding-left: 10px;
     padding-right: 10px;
   }
